<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home_icon" />

        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/about_us_icon"/>

        <item
            android:id="@+id/services"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/services_icon"/>

        <item
            android:id="@+id/works"
            android:icon="@drawable/ic_work_black_24dp"
            android:title="@string/our_works_icon"/>
        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/contact_icon"/>
        <item
            android:id="@+id/career"
            android:icon="@drawable/ic_wc_black_24dp"
            android:title="@string/career_icon"/>
        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/login_icon"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_icon" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="@string/mail_icon" />
        </menu>
    </item>

</menu>
