<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yanca.technorio1.AboutFragment"
    android:orientation="vertical"
    android:id="@+id/aboutFrag_layout">

    <ImageView
        android:id="@+id/aboutUs_logo"
        android:src="@drawable/firm_logo"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/quote"
        android:text="@string/quote"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:background="@color/lightGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <!-- TODO: Update blank fragment layout -->

    <FrameLayout
        android:id="@+id/intro_frag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textIntro"
                android:text="@string/textIntro"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/offer"
                android:text="@string/offer"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lead"
                android:text="@string/lead"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>


